web/timeline: fix hover menu z-index

--- a/web/src/ui/timeline/menu/index.css
+++ b/web/src/ui/timeline/menu/index.css
@@ -8,6 +8,7 @@ div.event-hover-menu {
 	display: flex;
 	gap: .25rem;
 	padding: .125rem;
+	z-index: 1;
 
 	> button {
 		width: 2rem;
